# Quarry

./: .gitignore  README.md  config.example.toml  hosted_models.toml  openrouter_qa_test.py  pyproject.toml  quarry.local.toml.example  start_backend.py  start_frontend.command
docs/: ARCHITECTURE.md  DESIGN.md  MODELS_PROMPTS.md  README.md
src/quarry/: __init__.py  cli.py  config.py  hosted_auth.py  hosted_settings.py  logging_utils.py  model_cache.py  prompts.py  retries.py  startup.py
src/quarry/adapters/: in_memory.py  interfaces.py  local_models.py  mlx_runtime.py  production.py  structured_payloads.py
src/quarry/api/: app.py  routes.py
src/quarry/domain/: models.py
src/quarry/ingest/: __init__.py  chunking.py  indexing.py  normalize.py  parsers.py  pipeline.py
src/quarry/pipeline/: decomposition.py  generation.py  parsing.py  retrieval.py  verification.py
src/quarry/services/: message_run_store.py  message_service.py  (+3 more)
tests/: openrouter_qa_test.py  test_api_contract.py  test_config.py  test_hosted_auth.py  test_hosted_settings.py  test_ingest_normalize.py  test_ingest_parsers.py  test_ingest_pipeline.py  test_local_models.py  test_logging_utils.py  test_message_service.py  test_mlx_runtime.py  test_nli_improvements.py  test_parsing.py  test_pipeline_service.py  test_prompts.py  test_retrieval.py  test_review_service.py  test_runtime.py  test_session_store.py  test_ui_e2e.py  test_verification.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  types.ts
(+52 files in other folders)
